--- a/src/app.html
+++ b/src/app.html
@@ -3,9 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="icon" type="image/svg+xml" href="%sveltekit.assets%/favicon.svg" />
+		<link rel="apple-touch-icon" sizes="180x180" href="%sveltekit.assets%/apple-touch-icon.png" />
+		<link rel="manifest" href="%sveltekit.assets%/site.webmanifest" />
+		<title>QLOCKTWO</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+	<body data-sveltekit-preload-data="hover" class="bg-zinc-50 dark:bg-zinc-950">
+		<div class="flex h-screen w-screen flex-col items-center justify-center gap-2">
+			%sveltekit.body%
+		</div>
 	</body>
 </html>
